knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/Contract.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>