knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Acknowledgment_Required__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgment Required</label>
    <type>Checkbox</type>
</CustomField>