knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Address_of_Client_Entity__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Client_Entity__c</fullName>
    <label>Address of Client Entity</label>
    <type>TextArea</type>
</CustomField>