knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Administrative_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Start_Date__c</fullName>
    <label>Administrative Start Date</label>
    <type>Date</type>
</CustomField>