knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/ADT_CDF_Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADT_CDF_Penalty_Amount__c</fullName>
    <label>ADT/CDF Penalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>