knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/ADT_CDF_Penalty_ckbox__c.field-meta.xml
<CustomField>
    <fullName>ADT_CDF_Penalty_ckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADT/CDF Penalty</label>
    <type>Checkbox</type>
</CustomField>