knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/ADT_CDF_Penalty_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ADT_CDF_Penalty_Frequency__c</fullName>
    <label>ADT/CDF Penalty Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per quarter</fullName>
            </value>
            <value>
                <fullName>one-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>