knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Category__c</fullName>
    <label>Agreement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation Agreement</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>BAA - Facility</fullName>
            </value>
            <value>
                <fullName>BAA - Vendor</fullName>
            </value>
            <value>
                <fullName>Confidentiality Agreement</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Facility Agreement</fullName>
            </value>
            <value>
                <fullName>GME Agreement</fullName>
            </value>
            <value>
                <fullName>Hospice Agreement</fullName>
            </value>
            <value>
                <fullName>Leased Clinician Agreement</fullName>
            </value>
            <value>
                <fullName>Locum Tenens</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Subcontractor Clinician Agreement</fullName>
            </value>
            <value>
                <fullName>Assistant Medical Director Agreement</fullName>
                <isActive>false</isActive>
                <label>Assistant Medical Director Agreement</label>
            </value>
            <value>
                <fullName>BAA - Provider</fullName>
                <isActive>false</isActive>
                <label>BAA - Provider</label>
            </value>
            <value>
                <fullName>Business Associate Agreement</fullName>
                <isActive>false</isActive>
                <label>Business Associate Agreement</label>
            </value>
            <value>
                <fullName>EE NP Agreement</fullName>
                <isActive>false</isActive>
                <label>EE NP Agreement</label>
            </value>
            <value>
                <fullName>EE NP Lead MLP Agreement</fullName>
                <isActive>false</isActive>
                <label>EE NP Lead MLP Agreement</label>
            </value>
            <value>
                <fullName>EE PA Agreement</fullName>
                <isActive>false</isActive>
                <label>EE PA Agreement</label>
            </value>
            <value>
                <fullName>EE PA Load MLP Agreement</fullName>
                <isActive>false</isActive>
                <label>EE PA Load MLP Agreement</label>
            </value>
            <value>
                <fullName>EE Physician</fullName>
                <isActive>false</isActive>
                <label>EE Physician</label>
            </value>
            <value>
                <fullName>Hospital Medicine Program Administrator</fullName>
                <isActive>false</isActive>
                <label>Hospital Medicine Program Administrator</label>
            </value>
            <value>
                <fullName>Hospital Medicine Program Director</fullName>
                <isActive>false</isActive>
                <label>Hospital Medicine Program Director</label>
            </value>
            <value>
                <fullName>Lead Mid Level Agreement</fullName>
                <isActive>false</isActive>
                <label>Lead Mid Level Agreement</label>
            </value>
            <value>
                <fullName>Medical Director Agreement</fullName>
                <isActive>false</isActive>
                <label>Medical Director Agreement</label>
            </value>
            <value>
                <fullName>Parent Provider Agreement</fullName>
                <isActive>false</isActive>
                <label>Parent Provider Agreement</label>
            </value>
            <value>
                <fullName>Provider Agreement</fullName>
                <isActive>false</isActive>
                <label>Provider Agreement</label>
            </value>
            <value>
                <fullName>Safety</fullName>
                <isActive>false</isActive>
                <label>Safety</label>
            </value>
            <value>
                <fullName>Wellness</fullName>
                <isActive>false</isActive>
                <label>Wellness</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>