knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Agreement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Effective_Date__c</fullName>
    <label>Agreement Effective Date</label>
    <type>Date</type>
</CustomField>