knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Agreement_Record_Needed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Record_Needed__c</fullName>
    <label>Agreement Record Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Core Contract</fullName>
            </value>
            <value>
                <fullName>New Addendum</fullName>
            </value>
            <value>
                <fullName>Update Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>