knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Amendment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Effective_Date__c</fullName>
    <label>Amendment Effective Date</label>
    <type>Date</type>
</CustomField>