knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Annual_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Aggregate__c</fullName>
    <label>Annual Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>