knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Annual_Audit_Due__c.field-meta.xml
<CustomField>
    <fullName>Annual_Audit_Due__c</fullName>
    <label>Annual Audit Due</label>
    <type>Date</type>
</CustomField>