knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Annual_Budget_Required__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Budget Required</label>
    <type>Checkbox</type>
</CustomField>