knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Annual_Fixed_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fixed_Management_Fee__c</fullName>
    <label>Annual Fixed Management Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>