knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Annual_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subsidy__c</fullName>
    <label>Annual Subsidy</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>