knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Anticipated_Clinical_Hours__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Clinical_Hours__c</fullName>
    <label>Anticipated Clinical Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>