knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Anticipated_Start_Date_for_Services__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Start_Date_for_Services__c</fullName>
    <label>Anticipated Start Date for Services</label>
    <type>Date</type>
</CustomField>