knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Appeals_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Appeals_Deadline__c</fullName>
    <label>Appeals Deadline</label>
    <type>Date</type>
</CustomField>