knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/At_Risk_Incentive_Detail__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Incentive_Detail__c</fullName>
    <label>At Risk/Incentive Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>