knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Attorney_s_Fees__c.field-meta.xml
<CustomField>
    <fullName>Attorney_s_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney&apos;s Fees</label>
    <type>Checkbox</type>
</CustomField>