knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Auto_Extend_Term__c.field-meta.xml
<CustomField>
    <fullName>Auto_Extend_Term__c</fullName>
    <label>Auto Extend Term</label>
    <length>40</length>
    <type>Text</type>
</CustomField>