knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Avg_Monthly_NPPA_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_NPPA_Shifts__c</fullName>
    <label>Avg Monthly NPPA Shifts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>