knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Base_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Base_Agreement_Date__c</fullName>
    <description>original cancelled Clinician contract Start Date</description>
    <label>Base Agreement Date</label>
    <type>Date</type>
</CustomField>