knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Billable_Volume_Visit_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Billable_Volume_Visit_Shortfall__c</fullName>
    <label>Billable Volume - Visit Shortfall</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>