knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Billing_Company_Override__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Company Override</label>
    <type>Checkbox</type>
</CustomField>