knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Board_Certified__c.field-meta.xml
<CustomField>
    <fullName>Board_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Certified</label>
    <type>Checkbox</type>
</CustomField>