knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Chargebacks__c.field-meta.xml
<CustomField>
    <fullName>Chargebacks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargebacks</label>
    <type>Checkbox</type>
</CustomField>