knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Chargemaster_Notice_Needed__c.field-meta.xml
<CustomField>
    <fullName>Chargemaster_Notice_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chargemaster Notice Needed</label>
    <type>Checkbox</type>
</CustomField>