knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Charity_Care_Policy__c.field-meta.xml
<CustomField>
    <fullName>Charity_Care_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charity Care Policy</label>
    <type>Checkbox</type>
</CustomField>