knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Client_Compliance_with_Ethical_Religious__c.field-meta.xml
<CustomField>
    <fullName>Client_Compliance_with_Ethical_Religious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethical/Religious Directive</label>
    <type>Checkbox</type>
</CustomField>