knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Client_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Division__c</fullName>
    <label>Client Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>PAPS</fullName>
            </value>
            <value>
                <fullName>Wellness Works</fullName>
            </value>
            <value>
                <fullName>CS Partners</fullName>
            </value>
            <value>
                <fullName>eHealth</fullName>
            </value>
            <value>
                <fullName>None Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>