knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Client_Service_VP__c.field-meta.xml
<CustomField>
    <fullName>Client_Service_VP__c</fullName>
    <label>Client Service VP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>