knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Clinical_Performance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Performance_Manager__c</fullName>
    <label>Clinical Performance Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>