knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Clinician_Email__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Email__c</fullName>
    <description>Used for send with docusign</description>
    <formula>Account.PersonContact.Email</formula>
    <label>Clinician Email</label>
    <type>Text</type>
</CustomField>