knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Clinician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_First_Name__c</fullName>
    <description>Used for send with docusign</description>
    <formula>Account.PersonContact.FirstName</formula>
    <label>Clinician First Name</label>
    <type>Text</type>
</CustomField>