knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Clinician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Last_Name__c</fullName>
    <description>Used in send with docusign</description>
    <formula>Account.PersonContact.LastName</formula>
    <label>Clinician Last Name</label>
    <type>Text</type>
</CustomField>