knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/COLA__c.field-meta.xml
<CustomField>
    <fullName>COLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COLA</label>
    <type>Checkbox</type>
</CustomField>