knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/COLA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>COLA_Effective_Date__c</fullName>
    <label>COLA Effective Date</label>
    <type>Date</type>
</CustomField>