knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Collaborative_Practice_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Collaborative_Practice_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborative Practice Agreement</label>
    <referenceTo>Collaborative_Practice_Agreement__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>