knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Collections_Protector_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collections_Protector_Target_Amount__c</fullName>
    <label>Collections Protector Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>