knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Collections_Protector_Terms__c.field-meta.xml
<CustomField>
    <fullName>Collections_Protector_Terms__c</fullName>
    <label>Collections Protector Terms</label>
    <type>TextArea</type>
</CustomField>