knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/ConnectedCare_Services__c.field-meta.xml
<CustomField>
    <fullName>ConnectedCare_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConnectedCare Services</label>
    <type>Checkbox</type>
</CustomField>