knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Active__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Active Do Not Use</label>
    <type>Checkbox</type>
</CustomField>