knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approval_Date__c</fullName>
    <label>Contract Approval Date</label>
    <type>DateTime</type>
</CustomField>