knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration_Months__c</fullName>
    <formula>Contract_Duration_Days__c / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>