knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_HireDate_Trigger_Ack__c.field-meta.xml
<CustomField>
    <fullName>Contract_HireDate_Trigger_Ack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract HireDate Trigger Ack</label>
    <type>Checkbox</type>
</CustomField>