knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Negotiation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation_Completed_Date__c</fullName>
    <label>Contract Negotiation Completed Date</label>
    <type>Date</type>
</CustomField>