knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Revenue_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Contract_Revenue_Accrual__c</fullName>
    <label>Contract Revenue Accrual</label>
    <length>50</length>
    <type>Text</type>
</CustomField>