knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Special_Terms__c</fullName>
    <label>Contract Special Terms</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>