knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_State__c.field-meta.xml
<CustomField>
    <fullName>Contract_State__c</fullName>
    <label>Contract State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>