knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date__c</fullName>
    <label>Contract Termination</label>
    <type>Date</type>
</CustomField>