knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketed</fullName>
            </value>
            <value>
                <fullName>TSG Contract</fullName>
            </value>
            <value>
                <fullName>Start Up</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Term &amp; Renewals</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Special Terms</fullName>
            </value>
            <value>
                <fullName>Legal Terms</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Renewals</fullName>
                <isActive>false</isActive>
                <label>Terms &amp; Renewals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>