knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contracted_Days__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Days__c</fullName>
    <formula>IF( EndDate &lt; Today(),EndDate - StartDate, (Today() - StartDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>